# InBody-Multi-Model-Technical-Support-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
data/seed/: error_codes.json  peripheral_compatibility.json
deploy/: ec2-userdata.sh  scheduler-cfn.yml
docs/: deployment-guide.md
scripts/: ingest_manuals.py  seed_structured_data.py
specs/001-inbody-tech-master/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-inbody-tech-master/checklists/: requirements.md
specs/001-inbody-tech-master/contracts/: api-contract.md
src/: config.py  main.py
src/api/: chat.py  errors.py  health.py  models_api.py  peripherals.py  sessions.py
src/db/: database.py  schemas.py  seed.py
src/graph/: edges.py  workflow.py
src/graph/nodes/: clinical_agent.py  connect_agent.py  guardrail.py  install_agent.py  intent_router.py  model_router.py  placeholder_agent.py  troubleshoot_agent.py
src/models/: error_codes.py  inbody_models.py  peripherals.py  state.py
src/prompts/: disclaimers.py  system_prompts.py  tone_profiles.py
src/rag/: ingest.py  metadata.py  vectorstore.py
src/tools/: error_code_tool.py  manual_search_tool.py  peripheral_tool.py
tests/: conftest.py
ui/: api_client.py  app.py  components.py
